@@ -106,15 +106,13 @@ public:
   HexParserPtr parser;
 
   // idb 
-  Tuple idb; 
-  std::vector<Tuple> idbList;
+  std::vector<ID> idb; 
+  std::vector<std::vector<ID> > idbList;
 
   // edb 
   Interpretation::Ptr edb; 
   std::vector<InterpretationPtr> edbList;
 
-  // this refer to MLPSolver.nASReturned
-  int nASToBeReturned;
   // maxint setting, this is ID_FAIL if it is not specified, an integer term otherwise
   uint32_t maxint;
 
