@@ -501,13 +501,11 @@ removeNamespaces()
 	}
   if( ctx->config.getOption("MLP") ) 
     {
-      //rmv. std::cout << "[State.cpp] got an MLP option" << std::endl;
       StatePtr next(new ModuleSyntaxCheckState);
       changeState(ctx, next);
     }
   else 
     {
-      //rmv. std::cout << "[State.cpp] have no MLP option" << std::endl;
       StatePtr next(new RewriteEDBIDBState);
       changeState(ctx, next);
     }
@@ -517,11 +515,9 @@ MANDATORY_STATE_CONSTRUCTOR(ModuleSyntaxCheckState);
 // ModuleSyntaxChecker ..
 void ModuleSyntaxCheckState::moduleSyntaxCheck(ProgramCtx* ctx)
 {
-  //rmv. std::cout << "[State.cpp] entering ModuleSyntaxCheckState::moduleSyntaxCheck" << std::endl;
   DLVHEX_BENCHMARK_REGISTER_AND_SCOPE(sid,"Module Syntax Check");
   ModuleSyntaxChecker sC(*ctx);
   bool success = sC.verifySyntax();
-  //rmv. std::cout << "[State.cpp] after verifySyntax: " << success << std::endl;
   if (success)
     {
       StatePtr next(new MLPSolverState);
@@ -533,7 +529,6 @@ void ModuleSyntaxCheckState::moduleSyntaxCheck(ProgramCtx* ctx)
       StatePtr next(new PostProcessState);
       changeState(ctx, next);
     }
-  //rmv. std::cout << "[State.cpp] leaving ModuleSyntaxCheckState::moduleSyntaxCheck" << std::endl;
 }
 
 MANDATORY_STATE_CONSTRUCTOR(MLPSolverState);
